# SCRFD_FaceDetection_TensorRT

./: .gitignore  CMakeLists.txt  README.md  face_detector.h  logging.h  main.cpp  scrfd_trt.cpp  scrfd_trt.h
models/: scrfd_2.5g_bnkps_shape640x640.onnx
